--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -5,15 +5,16 @@
 
 body {
     padding: 20px;
-    
-    
+   
 }
+
 main {
   padding: 10px;
-  border: 2px solid black;
+  border: 2px solid rgb(188, 188, 188);
   border-radius: 5px;
 
 }
+
 .name {
     padding: 40px;  
     background-color: f4f4f4;
@@ -23,22 +24,18 @@ main {
 }
 
 
-#contentblock {
-    padding: 20px;
-    background-color: #fad5d5;
-}
-
 header {
     text-align: center;
     padding: 10px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #745ced;
     color: #ffffff;
-    border-radius: 10px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 
 aside {
-    height: 450px;
+    min-height: 450px;
     background-color: #f5f5f5;
     color: black;
     padding:  20px;
@@ -52,7 +49,7 @@ aside {
 #forecast {
     justify-content: end;
     background-color: #ffffff;
-    padding: 20px;
+   
 }
 
 footer {
@@ -61,15 +58,19 @@ footer {
     background-color: #c7c7c7;
     width: 100%;
 }
+
 .btn {
     margin: auto;
     margin-top: 10px;
     width: 100%;
     background-color: #745ced;
     border-style: none;
+    color: white;
 }
-.btn:hover {
-    background-color: #a497e4;
+ /* ---!import so it can overwrite the boostrap---*/
+.btn:hover,.btn:active {
+    background-color: #a497e4 !important;
+    color: white !important;
 }
 
 .btn .name {
@@ -77,18 +78,20 @@ footer {
     margin-top: 10px;
     width: 100%; 
 }
+
 #cityInput {
     width: 100%;
-
 }
 
 #mainContent {
     padding: 20px;
     
 }
+
 #mainCity {
-    border: 2px solid black;
+    border: 2px solid rgb(188, 188, 188);
     border-radius: 5px;
+    min-height: 180px;
 }
 
 #mainCity ul {
@@ -102,10 +105,12 @@ h4 {
     display: inline-block;
     
 }
+/* ----cards showing the forecast---- */
 #cardHolder {
     display: flex;
     justify-content: space-between;
 }
+
 #cardHolder div {
     width: 18%;
     background-color: #a9a9a9;
@@ -115,3 +120,52 @@ h4 {
     padding: 10px
     
 }
+/* City list parent ul */
+#cities-list {
+    list-style: none;
+    padding: 5px;
+    margin-top: 20px;
+    text-align: center;
+
+}
+/* ----li cities----  */
+#cities-list li {
+    background-color: #ffffff;
+    padding: 10px;
+    margin-top: 10px;
+    border-radius: 7px;
+    cursor: pointer;
+
+}
+/*  creatin hover for the city list */
+#cities-list li:hover {
+    background-color: #dfdfdf;
+}
+/* ----welcome message---- */
+#welcome {
+    padding: 15%;
+    text-align: center;
+}
+
+#fdForecast {
+margin-top: 10px;
+}
+
+#error {
+    padding: 15%;
+    text-align: center;
+}
+
+/* ----adding mediaqueries for smaller screens---- */
+@media screen and (max-width: 820px) {
+    #mainGrid {
+        grid-template-columns: 100%;
+    }
+    #cities-list li {
+        display: inline-block;
+        margin: 10px;
+    }
+    aside {
+        min-height: 10px; 
+    }
+  }
